--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         body{background: #fff;}
     }
      /* for detecting dark theme */
-     @media(prefers-color-scheme: light){
+     @media(prefers-color-scheme: dark){
         body{background: #000;}
+        p, h1, h3{color:#c1c1c1}
+
     }
     </style>
 </head>
