--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Auto Light/Dark Theme Detection With CSS</title>
     <style>
     *{box-sizing: border-box;} 
-    body{padding:0px; margin: 0px; font-family: Georgia, 'Times New Roman', Times, serif;}    
+    body{padding:0px; margin: 0px; font-family: Georgia, 'Times New Roman', Times, serif; background: #fff;}     
     .wrapper{width:100%; max-width: 1000px; padding:0 15px; margin: auto;}
     .listing{width: 100%;display: flex; justify-content: space-between; flex-wrap: wrap;}
     .card{max-width:30%;}   
     img{max-width: 100%;}
-    p{font-size: 14px; margin: 0px 0 20px; padding: 0px; }
-    h3{font-size: 18px; margin: 10px 0 5px; padding: 0px; font-family: Georgia, 'Times New Roman', Times, serif;}
-    h1{font-size: 22px;margin: 20px 0 24px;}
+    p{font-size: 14px; margin: 0px 0 20px; padding: 0px;  color: #222;}
+    h3{font-size: 18px; margin: 10px 0 5px; padding: 0px; color: #222 font-family: Georgia, 'Times New Roman', Times, serif;}
+    h1{font-size: 22px;margin: 20px 0 24px; color: #222}
     @media(max-width: 767px){.card{max-width:100%;}}
 
 
